frontend/test/should_fail/method_model_inh_ovrrd_failef.gm
edge class E
{
	function foo() : int
	{
		return (42);
	}
	
	function qux(var x:int) : string
	{
		return("42");
	}
}

edge class EE extends E
{
	function foo(var x:int) : int
	{
		return (42);
	}
	
	function qux() : string
	{
		return("42");
	}
}
